// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaveDetails Caring Leave renders documentation hint correctly with family relationship 1`] = `
Array [
  <p
    key="p-0"
  >
    To meet 
    <a
      href="https://www.mass.gov/info-details/employer-paid-leave-application-review-guide"
      key="1"
      rel="noopener"
      target="_blank"
    >
      federal laws and regulations
    </a>
    , you must keep medical records separate and confidential from any personnel files.
  </p>,
  <p
    key="p-1"
  >
    View the family relationship on page 3.
  </p>,
]
`;

exports[`LeaveDetails Caring Leave renders the relationship question 1`] = `
<Fragment>
  <ReviewHeading
    level="2"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    data-test="leave-type"
    label="Leave type"
    level="3"
  >
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-care-for-a-family-member-"
      rel="noopener"
      target="_blank"
    >
      Care for a family member
    </a>
  </ReviewRow>
  <ReviewRow
    label="Application ID"
    level="3"
  >
    NTN-111-ABS-01
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
    level="3"
  >
    1/1/2021 to 7/1/2021
  </ReviewRow>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "Yes",
        },
        Object {
          "checked": false,
          "label": "I don't know",
          "value": "Unknown",
        },
        Object {
          "checked": false,
          "label": "No (comment required)",
          "value": "No",
        },
      ]
    }
    hint={
      <Trans
        components={
          Object {
            "eligible-relationship-link": <a
              href="https://www.mass.gov/family-caring-leave-relationships"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="components.employersLeaveDetails.familyMemberRelationshipHint"
      />
    }
    label={
      <ReviewHeading
        level="2"
      >
        Do you believe the listed relationship is described accurately? (Optional)
      </ReviewHeading>
    }
    name="believe_relationship_accurate"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value=""
  />
  <ConditionalContent
    clearField={[Function]}
    data-test="relationship-accurate-no"
    fieldNamesClearedWhenHidden={
      Array [
        "relationship_inaccurate_reason",
      ]
    }
    getField={[Function]}
    updateFields={[MockFunction]}
    visible={false}
  >
    <Alert
      className="measure-5 margin-y-3"
      heading="The employee will be denied paid leave."
      headingSize="3"
      state="warning"
    >
      We take allegations about false relationships seriously. Choosing No may trigger a denial of the employee's application for paid leave. The employee has the right to appeal if their application is denied.
    </Alert>
    <div
      className="usa-form-group"
    >
      <FormLabel
        className="usa-label"
        htmlFor="relationship_inaccurate_reason"
        small={true}
      >
        Tell us why you think this relationship is inaccurate.
      </FormLabel>
      <textarea
        className="usa-textarea margin-top-3"
        name="relationship_inaccurate_reason"
        onChange={[Function]}
      />
    </div>
  </ConditionalContent>
  <ConditionalContent
    data-test="relationship-accurate-unknown"
    visible={false}
  >
    <Alert
      className="measure-5 margin-y-3"
      state="info"
    >
      If you have not confirmed the accuracy of the family relationship the employee has attested to, please note that the Department of Family and Medical leave will adjudicate the claim based on the attestation the employee made when submitting their application.
    </Alert>
  </ConditionalContent>
</Fragment>
`;

exports[`LeaveDetails renders the component 1`] = `
<Fragment>
  <ReviewHeading
    level="2"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    data-test="leave-type"
    label="Leave type"
    level="3"
  >
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-medical-leave-"
      rel="noopener"
      target="_blank"
    >
      Medical leave
    </a>
  </ReviewRow>
  <ReviewRow
    label="Application ID"
    level="3"
  >
    NTN-111-ABS-01
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
    level="3"
  >
    1/1/2021 to 7/1/2021
  </ReviewRow>
</Fragment>
`;

exports[`LeaveDetails when there are documents renders documentation hint correctly with family relationship 1`] = `
Array [
  "To meet ",
  <a
    href="https://www.mass.gov/info-details/employer-paid-leave-application-review-guide"
    key="1"
    rel="noopener"
    target="_blank"
  >
    federal laws and regulations
  </a>,
  ", you must keep medical records separate and confidential from any personnel files.",
]
`;
